Changelog
---------

3.9.8
- retry transactions on detected deadlock
- supported KeepALive during login phase
- deprecated DAO methods without transaction parameter
- use timestamp of when a command was added to the queue in all database operations
- DBCommandQueue supports low priority database commands, that are not critical for the next log in


3.9.7
- fixed concurrency issue between perceptions and content transfer in WebSocketChannel 


3.9.6 Security Update

- Marauroa failed to verify username on client transfer (thanks to pepzs for the report)



3.9.5

- fixed a race condition allowing double login which may result in item duplication (thanks to pepsz for the report)

- added support for HTML clients

- smaller features
  - database indexes are created automatically on database creation or update
  - added data type long
  - support character creation while in game
  - added multilanguage support (en, de, pl, uk)
  - initial status of account and characters can be configured in server.ini

- code
  - converted CVS to Git
  - https://github.com/arianne/marauroa
  - junit tests use in memory database
  - various performance and memory usage improvements
  - fixed compiler warnings and improved code comments
  - code cleanup and refactorings


3.9.3
- retry database command on connection loss to the database server
- marauroa can invoke an external command (email_command in server.ini) with the token and email-address on account creation
- use a dedicated email table

3.9.2
- workaround for IllegalArgumentException in proxy check (see http://icedtea.classpath.org/bugzilla/show_bug.cgi?id=1055 ) 

3.9.1
- added support for Sha512Crypt with salt and pepper
- fixed cacheable flag being ignored

3.9
- failed logins are now logged with distinct status values
- client support for skippable empty perceptions
- ban messages are no longer restricted 256,
  if both server and client use the new protocol version 34